# CMake-demo

./: CMake 入门实战 _ HaHack.mhtml  README.md  cmclean.sh
Demo1/: CMakeLists.txt
Demo2/: main.cc
Demo3/: CMakeLists.txt  main.cc
Demo3/math/: cmake_install.cmake
Demo4/: CMakeLists.txt  README.md  main.cc
Demo4/math/: CMakeLists.txt  MathFunctions.cc
Demo7/: CMakeLists.txt  CTestTestfile.cmake  Demo  cmclean.sh  config.h  config.h.in  main.cc
Demo7/math/: CMakeLists.txt  Makefile  MathFunctions.cpp  cmake_install.cmake
workspace/Demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.cc
workspace/Demo2/: CMakeCache.txt  CMakeLists.txt  Demo2  Makefile  cmake_install.cmake
workspace/Demo3/: CMakeCache.txt  Makefile  cmake_install.cmake
workspace/Demo3/math/: Makefile
